--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/hapi": "^17.0.19",
     "@types/inert": "^5.1.1",
     "@types/jest": "^23.3.3",
+    "@types/lowdb": "^1.0.5",
     "@types/node": "^10.11.0",
     "del-cli": "^1.1.0",
     "jest": "^23.6.0",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "hapi": "^17.6.0",
-    "inert": "^5.1.0"
+    "inert": "^5.1.0",
+    "lowdb": "^1.0.0"
   }
 }
