--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "start": "node build/src/index",
     "build": "del-cli ./build && npm run lint && tsc",
-    "lint": "tslint --project tsconfig.json --config tslint.json src/**/*.ts"
+    "lint": "tslint --project tsconfig.json --config tslint.json src/**/*.ts",
+    "docker:build": "docker build -f docker/Dockerfile -t profile/${npm_package_name} .",
+    "docker:start": "docker run -d -it -p 80:8080 --name=kz profile/${npm_package_name}"
   },
   "author": "",
   "license": "MIT",
